# films-api

./: Cargo.toml  Dockerfile  README.md
src/: filters.rs  handlers.rs  main.rs  models.rs  tests.rs
src/ddb/: mod.rs
