[package]
name = "films-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
parking_lot = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.5.0"
log = "0.4.18"
urldecode = "0.1.1"
aws-config = "0.55.3"
aws-sdk-dynamodb = "0.28.0"
futures-util = "0.3.28"
futures = "0.3.28"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
serde_json = "1.0.96"
thiserror = "1.0.40"
aws-smithy-client = { version = "0.55.3", features = [
  "client-hyper",
  "rustls",
  "rt-tokio",
]}
serde_dynamo = "4.2.3"
tokio-stream = "0.1.14"
